ci/helloworld.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: node-web-app-container
        image: shib047/node-web-app:master-2
        ports:
        - name: nodejs-port
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - port: 80
    nodePort: 31400
    targetPort: nodejs-port
    protocol: TCP
  selector:
    app: helloworld
  type: NodePort
