ci/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: helloworld-ingress
spec:
  rules:
    - host: helloworld.com
      http:
        paths:
         - backend:
             serviceName: helloworld-service
             servicePort: 80
           path: /
